# sample-apps

./: .gitignore  CONTRIBUTING.md  LICENCE.txt  Makefile  README.md
.github/: CODEOWNERS
.github/workflows/: add-label-to-external-pr.yml
samples/dsm/akeneo-dsm/: Makefile  README.md  docker-compose.yml
samples/dsm/akeneo-dsm/back-end/: .dockerignore  .env  .gitignore  Makefile  (+6 more)
samples/start-app/js-node-express/: .env  .gitignore  Dockerfile  Makefile  README.md  app.js  docker-compose.yml  jest.config.js  package-lock.json  package.json  server.js
samples/start-app/php-symfony/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  composer.json  docker-compose.yml  package-lock.json  phpunit.xml.dist
samples/start-app/python-fastapi/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  python form  python_app.db  requirements.txt
samples/start-app/rust-actix/: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  rust_actix_test.db
samples/start-app/rust-actix/.cargo/: config.toml
samples/start-app/rust-actix/src/: application.rs  configuration.rs  database.rs  lib.rs  logger.rs  main.rs  server.rs  template.rs
samples/start-app/rust-actix/src/controller/: activate.rs  callback.rs  first_api_call.rs  health_check.rs  index.rs  mod.rs  notify_authorization_update.rs
samples/start-app/rust-actix/src/model/: mod.rs  token.rs  user.rs
samples/start-app/rust-actix/src/usecase/: activate_usecase.rs  callback_usecase.rs  first_api_callback_usecase.rs  mod.rs  notify_authorization_update_usecase.rs  openid_connect.rs
samples/start-app/rust-actix/templates/: _header.stpl  access_token.stpl  error.stpl  no_access_token.stpl
samples/start-app/rust-actix/tests/: configuration.rs  main.rs
samples/start-app/rust-actix/tests/common/: mod.rs
samples/start-app/rust-actix/tests/controller/: activate.rs  callback.rs  health_check.rs  mod.rs
samples/start-app/rust-actix/tests/features/: .env.test
samples/start-app/rust-actix/tests/usecase/: activate_usecase.rs  mod.rs
(+162 files in other folders)
