[package]
name = "rust-actix"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "sample-app"


[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-web = "4.3"
actix-cors = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
reqwest = "0.11"
