[package]
name = "rust-actix"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "sample-app"


[dependencies]
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
actix-web = { version = "4.3", features = ["secure-cookies"] }
actix-cors = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version="2.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
dotenv = "0.15"
env_logger = "0.10"
tracing-actix-web = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"
